--- a/cv_styles.css
+++ b/cv_styles.css
@@ -6,47 +6,61 @@ header {
 	font-size: 40px;
 	padding-bottom: 20px;
 }
+
 body{
 	margin: 15px;
 	height: 100vh;
 	background-color: ghostwhite;
 }
+
 .body{
 	display: flex;
 	flex-direction: column;
 	align-items: center;	
 }
+
 .topicbox {
-	margin: 10px 10px;
+	margin: 7px 10px;
 	width: 1100px;
 	background-color: ghostwhite;
-	border: 0.3px solid black;
+	border: 0.01px solid black;
 }
+
+ul{
+	margin-block-start: 0px;
+    	margin-block-end: 0px;
+	padding-inline-start: 20px;
+}
+
 footer{
 	margin-top: 5px;
 	max-width: 200px;
 	position: relative;
 	left: 10px
 }
+
 .topic {
 	font-size: 20px;
 	font-weight: bold;
 	padding : 5px 3px;
-	display: box;
-}
-.sub_topic {
-	font-size: 18px;
-	padding : 3px 2px;
 	display: block;
 }
-.description{
-	font-size:: 15px;
-	margin : 1.5px 3px;
-	display: block;
-}
-.details{
 
+.sub_topic {
+	font-size: 15px;
+	font-weight: 200px;
+	margin-top: 3.5px;
+	padding-left: 3px;
+	display: block;
 }
+
+.description{
+	margin-block-start: 1px;
+	margin-block-end: 2px;
+	font-size:13px;
+	padding-left : 3px;
+}
+
 a{
 	text-decoration: none;
 }
