--- a/cv_styles.css
+++ b/cv_styles.css
@@ -30,6 +30,7 @@ ul{
 	margin-block-start: 0px;
     	margin-block-end: 0px;
 	padding-inline-start: 20px;
+	font-size: 13px;
 }
 
 footer{
@@ -49,7 +50,7 @@ footer{
 .sub_topic {
 	font-size: 15px;
 	font-weight: 200px;
-	margin-top: 3.5px;
+	margin-top: 4.5px;
 	padding-left: 3px;
 	display: block;
 }
